--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ agreement-parties:
 
 
 # github-id is your github username
-github-id: uidaholib 
+github-id: cdil 
 # url is your gh-pages base, following the pattern: username.github.io
-url: https://uidaholib.github.io
+url: https://cdil.github.io
 # baseurl is your github repository's name prefixed with a /
-baseurl: /digital-project-management
+baseurl: /lostlitlab-project-management
 
 # Use Bootstrap (true, false)
 bootstrap: true
